--- a/WebContent/WEB-INF/html/admin/sap.html
+++ b/WebContent/WEB-INF/html/admin/sap.html
@@ -32,7 +32,7 @@
 
 <div id="wrapper">
     <div id="app">
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0;background: #404a59">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only" >Toggle navigation</span>
@@ -311,7 +311,7 @@
 </div>
 
 <script type="text/x-template" id="query-template">
-    <div class="col-lg-9 col-lg-offset-2 col-md-9 col-md-offset-2 col-sm-9 col-sm-offset-2  text-center">
+    <div class="col-lg-offset-2 col-lg-10 col-md-offset-2 col-md-10 col-sm-offset-2 col-sm-10 text-center">
         <div class="col-lg-12">
             <h1 class="page-header">查询快递</h1>
         </div>
@@ -513,34 +513,27 @@
         </div>
         <!--快件查询表头、结果列表模版-->
         <form class="form-inline" id="params">
+			<div class="row">
+			<div class="col-md-3">
             <label>寄件日期</label>
             <div class="form-group">
                 <input  type="date" class="form-control"  v-model="express.fromDate"/>
             </div>
+			</div>
+			<div class="col-md-3">
             <label>到达日期</label>
             <div class="form-group">
                 <input  type="date" class="form-control" v-model="express.arriveDate"/>
             </div>
+			</div>
+			<div class="col-md-3">
             <label>快递单号</label>
             <div class="form-group">
                 <input  class="form-control" type="text"
                         maxlength="15" autofocus required  placeholder="输入快递单号" v-model="express.expressNo"/>
             </div>
-            <label>快递公司</label>
-            <div class="form-group">
-                <input  class="form-control" type="text"
-                        maxlength="15"  required  placeholder="输入快递公司" v-model="express.company"/>
-            </div>
-            <label>收件人</label>
-            <div class="form-group">
-                <input  class="form-control" type="text"
-                        maxlength="15" autofocus required  placeholder="输入收件人" v-model="express.consignee"/>
-            </div>
-            <label>手机号</label>
-            <div class="form-group">
-                <input  id="phoneNumber" class="form-control" type="tel"
-                        maxlength="11" required="required" placeholder="输入手机号" v-model="express.contact"/>
-            </div>
+			</div>
+			<div>
             <label>快递类型</label>
             <div class="form-group">
                 <select  v-model="express.status" class="form-control">
@@ -551,12 +544,37 @@
                     <option value="S">已领取</option>
                 </select>
             </div>
+			</div>
+			</div>
+			<div class="row" style="margin-top:10px">
+			<div class="col-md-3">
+            <label>快递公司</label>
+            <div class="form-group">
+                <input  class="form-control" type="text"
+                        maxlength="15"  required  placeholder="输入快递公司" v-model="express.company"/>
+            </div>
+			</div>
+			<div class="col-md-3">
+            <label>收件人</label>
+            <div class="form-group">
+                <input  class="form-control" type="text"
+                        maxlength="15" autofocus required  placeholder="输入收件人" v-model="express.consignee"/>
+            </div>
+			</div>
+			<div class="col-md-3">
+            <label>手机号</label>
+            <div class="form-group">
+                <input  id="phoneNumber" class="form-control" type="tel"
+                        maxlength="11" required="required" placeholder="输入手机号" v-model="express.contact"/>
+            </div>
+			</div>
             <button id="searchButton" class="btn btn-primary" type="button" @click="getExpressList()" >
                 <span class="glyphicon glyphicon-search"></span>{{searchButton}}
             </button>
             <button id="createExpress" class="btn btn-primary" type="button" @click="createModal()" >
                 <span class="glyphicon glyphicon-plus"></span>录入快件
             </button>
+			</div>
         </form>
 
         <div class="row">
@@ -626,7 +644,7 @@
 <!--货柜查询组件-->
 <script type="text/x-template" id="query-shelf">
 
-    <div class="col-lg-9 col-lg-offset-2 col-md-9 col-md-offset-2 col-sm-9 col-sm-offset-2  text-center">
+    <div class="col-lg-offset-2 col-lg-10 col-md-offset-2 col-md-10 col-sm-offset-2 col-sm-10 text-center">
         <div class="col-lg-12">
             <h1 class="page-header">查询货柜</h1>
         </div>
