--- a/WebContent/WEB-INF/html/modal/searchModal.html
+++ b/WebContent/WEB-INF/html/modal/searchModal.html
@@ -1,20 +1,26 @@
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal"
 		aria-hidden="true">&times;</button>
-	<h3 class="modal-title text-center"><span class="glyphicon glyphicon-user"></span>查询结果</h3>
+	<h3 class="modal-title text-center">
+		<span class="glyphicon glyphicon-user"></span>查询结果
+	</h3>
 </div>
 <div class="modal-body">
-	<table class="table table-striped text-align" id="searchResultTable">
+	<table class="table table-striped" id="searchResultTable">
 		<thead>
-			<th rowspan="2">日期</th>
-			<th rowspan="2">快递单号</th>
-			<th rowspan="2">快递公司</th>
-			<th rowspan="2">联系方式</th>
-			<th rowspan="2">地址</th>
-			<th rowspan="2">快递状态</th>
-			<th rowspan="2">操作</th>
+			<th rowspan="2" class="text-center">日期</th>
+			<th rowspan="2" class="text-center">快递单号</th>
+			<th rowspan="2" class="text-center">快递公司</th>
+			<th rowspan="2" class="text-center">联系方式</th>
+			<th rowspan="2" class="text-center">地址</th>
+			<th rowspan="2" class="text-center">快递状态</th>
+			<th rowspan="2" class="text-center">操作</th>
 		</thead>
 	</table>
+	<div class="row">
+			<ul id="page"></ul>
+	</div>
+</div>
 </div>
 <div class="modal-footer">
 	<!-- 验证信息 -->
