--- a/WebContent/WEB-INF/html/admin/sap.html
+++ b/WebContent/WEB-INF/html/admin/sap.html
@@ -135,15 +135,15 @@
                                 <label for="consignee" class="col-sm-2 control-label">收件人</label>
                                 <div class="col-sm-8">
                                     <input type="text" autofocus required="required" class="form-control" id="consignee" v-model="newExpress.consignee" placeholder="收件人">
+                                    <span class="" v-show="isShowError.nameError">{{val}}</span>
                                 </div>
-                                <span class="" v-show="isShowError.nameError">{{val}}</span>
                             </div>
                             <div class="form-group">
                                 <label for="expressNumber" class="col-sm-2 control-label">快递单号</label>
                                 <div class="col-sm-8">
                                     <input type="text" required="required" class="form-control" id="expressNumber" v-model="newExpress.expressNo" placeholder="输入快递单号">
+                                    <span class="color:red" v-show="isShowError.expressNoError">{{val}}</span>
                                 </div>
-                                <span  v-show="isShowError.expressNoError">{{val}}</span>
                             </div>
                             <div class="form-group">
                                 <label for="company" class="col-sm-2 control-label">快递公司</label>
@@ -155,15 +155,15 @@
                                 <label for="contact" class="col-sm-2 control-label">手机号</label>
                                 <div class="col-sm-8">
                                     <input type="tel" required="required" class="form-control" id="contact" v-model="newExpress.contact " placeholder="输入手机号">
+                                    <span class="color:red" v-show="isShowError.phoneError">{{val}}</span>
                                 </div>
-                                <span  v-show="isShowError.phoneError">{{val}}</span>
                             </div>
                             <div class="form-group">
                                 <label for="mailAddress" class="col-sm-2 control-label">邮箱地址</label>
                                 <div class="col-sm-8">
                                     <input type="email"  required="required" class="form-control" id="mailAddress" v-model="newExpress.emailAddress " placeholder="输入邮箱地址">
+                                    <span  class="color:red" v-show="isShowError.mailError">{{val}}</span>
                                 </div>
-                                <span  v-show="isShowError.mailError">{{val}}</span>
                             </div>
                             <div class="form-group">
                                 <label for="fromDate" class="col-sm-2 control-label">寄件时间</label>
