--- a/WebContent/WEB-INF/html/error/404.html
+++ b/WebContent/WEB-INF/html/error/404.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>404</title>
 <link href="../css/bootstrap.css" type="text/css" rel="stylesheet">
+<link href="../css/style.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
 </head>
@@ -15,7 +16,7 @@
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3" style="padding-top:40%">
 				<a href="index">
-					<button class="btn btn-danger">
+					<button class="btn btn-404">
 						返回首页
 					</button> 
 				</a>
