--- a/WebContent/WEB-INF/html/express/index.html
+++ b/WebContent/WEB-INF/html/express/index.html
@@ -102,7 +102,7 @@
 						<label>手机号</label>
 						<div class="form-group">
 							<input id="phoneNumber" class="form-control" type="tel"
-								maxlength="11" required="required" placeholder="输入手机号" value="18319040556" />
+								maxlength="11" required="required" placeholder="输入手机号" />
 						</div>
 						<button id="searchButton" class="btn btn-default" type="button">
 							<span class="glyphicon glyphicon-search"></span>Search
