--- a/WebContent/WEB-INF/html/modal/searchModal.html
+++ b/WebContent/WEB-INF/html/modal/searchModal.html
@@ -11,6 +11,7 @@
 			<th rowspan="2" class="text-center">日期</th>
 			<th rowspan="2" class="text-center">快递单号</th>
 			<th rowspan="2" class="text-center">快递公司</th>
+			<th rowspan="2" class="text-center">收件人</th>
 			<th rowspan="2" class="text-center">联系方式</th>
 			<th rowspan="2" class="text-center">地址</th>
 			<th rowspan="2" class="text-center">快递状态</th>
