限制取件输入密码错误次数功能实现

--- a/WebContent/WEB-INF/html/express/index.html
+++ b/WebContent/WEB-INF/html/express/index.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap-paginator.js"></script>
+<script src="http://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 </head>
 <body data-spy="scroll" data-target="#menu" style="overflow: hidden;text-align:center">
 	<div class="navbar navbar-inverse navbar-fixed-top scrollclass"
